# AiChatCLI

./: .gitignore  AiChatCLI.sln  README.md
devtools/cli-session/: README.md  pyproject.toml
devtools/cli-session/cli_session/: __init__.py  __main__.py
devtools/cli-session/src/cli_session/: cli.py  client.py  manager.py  manager_server.py  protocol.py
devtools/cli-session/tests/: test_cli_session.py
devtools/workflow/: README.md  pyproject.toml
devtools/workflow/docs/: architecture.md  customization.md  usage.md
devtools/workflow/prompt_configs/: aichatcli-complex-chat-history-logging.yaml  aichatcli-dev-support.yaml  aichatcli-implement-chat-history-logging.yaml  aichatcli-implement-prompt-config.yaml  apply-review-fixes.md  implement.md  plan-approach.md  repository-survey.md  review.md
devtools/workflow/src/workflow_cli/: __main__.py  artifacts.py  cli.py  config.py  cursor_cli.py  cursor_output.py  executor.py  models.py  options.py  parsing.py  (+6 more)
devtools/workflow/tests/: test_templating_and_validation.py  test_workflow_loader.py
devtools/workflow/variables/: complex-delivery.json  dev-support.json  implement-feature.json
devtools/workflow/workflow_cli/: __init__.py
devtools/workflow/workflows/: aichatcli-apply-review-fixes-step.fragment.json  aichatcli-complex-delivery.json  aichatcli-dev-support.json  aichatcli-implement-feature.json  aichatcli-implement-step.fragment.json  aichatcli-plan-step.fragment.json  aichatcli-readonly-defaults.json  aichatcli-review-step.fragment.json  aichatcli-survey-step.fragment.json  aichatcli-write-defaults.json
(+119 files in other folders)
