[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-session"
version = "0.1.0"
description = "Persistent session wrapper for interactive command-line tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
cli-session = "cli_session.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
