[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cursor-workflow"
version = "0.1.0"
description = "Configurable batch workflow runner for Cursor CLI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
workflow-cli = "workflow_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
